--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,5 +17,14 @@ a {
 }
 
 button {
+	padding: 8px 16px;
 	cursor: pointer;
+	border-radius: 8px;
+	background-color: blueviolet;
+	color: #fff;
+	transition: filter 200ms;
+}
+
+button:hover {
+	filter: brightness(0.9);
 }
